<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/set_emergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact"
            android:textSize="@dimen/tv_normal_size" />

        <TextView
            android:id="@+id/set_emergency_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/text_body"
            tools:text="123****123" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_access_loacte"
            android:textSize="@dimen/tv_normal_size" />

        <Switch
            android:id="@+id/set_access_locate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray" />

    <LinearLayout
        android:id="@+id/set_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_img_cache"
            android:textSize="@dimen/tv_normal_size" />

        <TextView
            android:id="@+id/set_clear_img_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="@dimen/text_body" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray" />

    <TextView
        android:id="@+id/set_clear_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/clear_im_cache"
        android:textSize="@dimen/tv_normal_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray" />
    <TextView
        android:id="@+id/set_about_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/about_question"
        android:textSize="@dimen/tv_normal_size" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_gray" />
    <TextView
        android:id="@+id/set_check_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/check_update"
        android:textSize="@dimen/tv_normal_size" />

</LinearLayout>