<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_content_areas"
        app:cardCornerRadius="@dimen/btn_card_radius"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:lines="1"
                android:maxLength="11"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/verification_code"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                app:layout_constraintBottom_toTopOf="@id/login_tips"
                app:layout_constraintEnd_toStartOf="@id/register_get_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_account" />

            <TextView
                android:id="@+id/register_get_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_verification_code"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_body"
                app:layout_constraintBottom_toTopOf="@id/login_tips"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_account" />
            <TextView
                    android:visibility="gone"
                    android:id="@+id/login_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center"
                    android:text="@string/login_failed_ap"
                    android:textColor="#ff0000"
                    android:textSize="@dimen/text_body" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/bg_btn_login"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_normal_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_register" />
</android.support.constraint.ConstraintLayout>